chore: 选择供应商，自动带出相关联系信息

--- a/src/main/resources/templates/modules/purchase/purchase_order.html
+++ b/src/main/resources/templates/modules/purchase/purchase_order.html
@@ -268,8 +268,22 @@
         let $receiveContactInfo = $('#receiveContactInfo')
         let $soInfo = $('#soInfo')
 
+        let customerContactInfoMap = /*[[${customerContactInfoMap}]]*/
+        $('#partnerId option').each(function () {
+            if (this.value) {
+                $(this).data('contactPerson', customerContactInfoMap[this.value]['contactPerson'])
+                $(this).data('contactNumber', customerContactInfoMap[this.value]['contactNumber'])
+            }
+        })
+
         $('#partnerId').multipleSelect({
-            filter: true
+            filter: true,
+            onClick: function (view) {
+                if (view.data) {
+                    $('#contactPerson').val(view.data.contactPerson)
+                    $('#contactNumber').val(view.data.contactNumber)
+                }
+            }
         })
 
         let value = [
