fix: 成品出货显示规格信息

--- a/src/main/resources/templates/modules/produce/produce_order.html
+++ b/src/main/resources/templates/modules/produce/produce_order.html
@@ -457,7 +457,7 @@
                                     <td th:text="${sStat.index + 1}" data-index></td>
                                     <td th:text="${s.materialCode}" th:data-sort-value="${s.materialCode}"></td>
                                     <td th:text="${s.materialName}" th:data-sort-value="${s.materialName}"></td>
-                                    <td th:text="${s.materialSpecification}" th:data-sort-value="${s.materialSpecification}"></td>
+                                    <td th:text="${s.specification}" th:data-sort-value="${s.specification}"></td>
                                     <td th:text="${s.characteristic}" th:data-sort-value="${s.characteristic}"></td>
                                     <td th:text="${s.unitText}" th:data-sort-value="${s.unitText}"></td>
                                     <td th:text="${#numbers.formatDecimal(s.quantity,1,'COMMA',2,'POINT')}" th:data-sort-value="${s.quantity}" th:class="text-right"></td>
